Wegen Sicherheitsalarm log4j
CVE-2019-17571
moderate severity
Vulnerable versions: >= 1.2, <= 1.2.27

--- a/japl/pom.xml
+++ b/japl/pom.xml
@@ -94,14 +94,25 @@
 			<artifactId>parallelcolt</artifactId>
 			<version>0.10.1</version>
 		</dependency>
-		<!-- http://www.smooks.org/index -->
-		<!-- <dependency> <groupId>org.milyn</groupId> <artifactId>milyn-smooks-all</artifactId> 
-			<version>1.7.0</version> </dependency> -->
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+
+	        <dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.13.2</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.13.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-1.2-api</artifactId>
+			<version>2.13.2</version>
+		</dependency>
+
 
 	</dependencies>
 
